# LangChain_V1_AGI

./: README.md  main.py  pyproject.toml
01_Quickstart/utils/: llms.py
02_PromptTemplate/: agent.py
02_PromptTemplate/utils/: llms.py
03_StreamOutput/: 01_agent_invoke.py  02_agent_stream.py  03_agent_batch.py
03_StreamOutput/utils/: llms.py
04_ShortTermMemory/: 01_agent_InMemorySaver.py  02_agent_PostgresSaver.py
04_ShortTermMemory/utils/: llms.py
05_LongTermMemory/: agent_PostgresStore.py
05_LongTermMemory/utils/: llms.py
06_HumanInTheLoop/: agent_invoke_hitl.py  agent_stream_hitl.py
06_HumanInTheLoop/utils/: llms.py
07_RAG/: 04_agent_rag.py
07_RAG/utils/: llms.py
08_MCP/: agent_rag.py
08_MCP/utils/: llms.py
09_ObservabilityAndEvaluation/utils/: config.py  llms.py
10_RagWithMilvus/: agent_rag.py
12_AgentAPIServerWithSkills/: README.md  agent_api.py  api_test.py  gradio_ui.py
12_AgentAPIServerWithSkills/prompt/: system_prompt_tmpl.md
12_AgentAPIServerWithSkills/utils/: llms.py  skills.py  tools.py
13_AgentAPIServerWithStreaming/: README.md  agent_api.py  api_test.py
13_AgentAPIServerWithStreaming/prompt/: human_prompt_tmpl.md  system_prompt_tmpl.md
13_AgentAPIServerWithStreaming/utils/: config.py  tools.py
14_AgentAPIServerWithPlaywright/: agent_api.py  api_test.py  api_test_plus.py  调整说明.md
14_AgentAPIServerWithPlaywright/prompt/: system_prompt_tmpl.md
14_AgentAPIServerWithPlaywright/utils/: config.py  llms.py  tools.py
Quickstart_01/: README.md  agent.py
Quickstart_01/tests/: test_config.py
(+8 files in other folders)
