[project]
name = "langchain-v1-agi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-sdk>=0.3.14",
    "mcp>=1.27.0",
    "playwright>=1.59.0",
    "psycopg-pool>=3.3.1",
    "pydantic>=2.13.4",
    "pymilvus>=2.6.12",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
]
